# topsbottg

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
frontend/: app.js  index.html  styles.css
frontend/js/: api.js  bootstrap.js  constants.js  render-app.js  render-common.js  render-payouts.js  render-recipients.js  render-users.js  store.js  telegram.js  utils.js
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_paid_fields.py  0003_raw_payment_details.py  0004_drop_legacy_payment_profile_fields.py  0005_yearless_payout_period.py  0006_remove_user_is_active.py
nginx/: nginx.conf
nginx/templates/: default.conf.template
scripts/: backup.sh  generate-local-certs.sh  issue-letsencrypt-cert.sh  prod-bootstrap.sh  renew-letsencrypt-cert.sh
src/topsbottg/: __init__.py  __main__.py  api.py  bot.py  config.py  db.py  logging_utils.py  main.py  models.py  schemas.py  security.py  services.py  worker.py
tests/: conftest.py  test_api.py  test_bot.py  test_config.py  test_main.py  test_services.py  test_worker.py
